demo-ingress/ingress-example-3-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-3
spec:
  tls:
  - secretName: ssh-secret
  backend:
    serviceName: apiservice
    servicePort: 80
